--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
 		"vite-plugin-devtools-json": "^1.0.0"
 	},
 	"dependencies": {
+		"convex": "^1.28.0",
+		"convex-svelte": "^0.0.11",
 		"mode-watcher": "^1.1.0"
 	}
 }
